chore: use uv
