# server/ap_server/routers/store.py
@@ -11,7 +11,6 @@ from ..models import (
     ErrorResponse,
     Item,
     ListNamespaceResponse,
-    Namespace,
     Optional,
     SearchItemsResponse,
     StoreDeleteRequest,
